samples/_failures_safe/1761433195_61f187_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_088a7bf8.c: In function ‘main’:
./samples/SAFE/__tmp_088a7bf8.c:206:12: error: missing terminating " character
  206 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_088a7bf8.c:206:5: error: expected expression at end of input
  206 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_088a7bf8.c:206:5: error: expected declaration or statement at end of input
